tdf#160342 Unwanted space before end of line when printing

Also adjust some numeric literals to reflect they're
floating point values in the expressions.

Regression from 172b500ccbc8dac0496cc2936a9bcca793c0b594.

Change-Id: I8281ba7c7d480135471ba94b11d447d76fd33063
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/165860
Tested-by: Jenkins
Reviewed-by: Aron Budea <aron.budea@collabora.com>
(cherry picked from commit 357f07bfd96da6cca87fcf0ef339495c2fea6937)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/165836
Reviewed-by: خالد حسني <khaled@libreoffice.org>
Reviewed-by: Xisco Fauli <xiscofauli@libreoffice.org>